--- a/public/asset/css/foundation.css
+++ b/public/asset/css/foundation.css
@@ -214,11 +214,11 @@ form.custom .custom.disabled { background-color: #dddddd; }
 .lt-ie9 form.custom div.custom.dropdown a.selector { height: 30px; }
 
 /* The Grid ---------------------- */
-.row { width: 940px; max-width: 100%; min-width: 768px; margin: 0 auto; }
+/* .row { width: 940px; max-width: 100%; min-width: 768px; margin: 0 auto; }
 .row .row { width: auto; max-width: none; min-width: 0; margin: 0 -15px; }
 .row.collapse .column, .row.collapse .columns { padding: 0; }
 .row .row { width: auto; max-width: none; min-width: 0; margin: 0 -15px; }
-.row .row.collapse { margin: 0; }
+.row .row.collapse { margin: 0; } */
 
 .column, .columns { float: left; min-height: 1px; padding: 0 15px; position: relative; }
 .column.centered, .columns.centered { float: none; margin: 0 auto; }
