--- a/resources/js/pages/form.css
+++ b/resources/js/pages/form.css
@@ -206,10 +206,10 @@ input[type="checkbox"] {
 
 /* -------Height-------- */
 
-.h100
+/* .h100
 {
     height:100vh;
-}
+} */
 .h52
 {
     height:52px!important;
