--- a/resources/js/pages/form.css
+++ b/resources/js/pages/form.css
@@ -227,6 +227,16 @@ input[type="checkbox"] {
     margin-top: 15px!important;
 }
 
+.mt234
+{
+    margin-top: 234px!important;
+}
+
+.mt70
+{
+    margin-top: 70px!important;
+}
+
 .-mt3
 {
     margin-top: -3px;
