--- a/resources/js/pages/form.css
+++ b/resources/js/pages/form.css
@@ -416,6 +416,11 @@ input[type="checkbox"] {
 {
     letter-spacing: 0px;
 }
+
+.bg-grey
+{
+    background-color: #565656;
+}
 /* -----------------Changing the errors-------------------- */
 
 .row {
@@ -446,12 +451,6 @@ input[type="checkbox"] {
     top: -25px;
     width: 33px!important;
     height: 24px!important;
-}
-
-.ts
-{
-    /* background-image: url(/images/testimonials.svg);
-    background-color: white; */
 }
 
 #car-loan-cal .ui-slider {
