--- a/resources/js/pages/form.css
+++ b/resources/js/pages/form.css
@@ -307,6 +307,11 @@ input[type="checkbox"] {
     margin-left:62px!important;
 }
 
+.ml14
+{
+    margin-left:14px!important;
+}
+
 .mb20
 {
     margin-bottom: 20px;
